@@ -1,9 +1,10 @@
 2009-10-07  fabian
 
-    * We now use NSConnection to monitor session activity in PTYTask.m. The CPU
+    * We now use NSFileHandle to monitor session activity in PTYTask.m. The CPU
       usage is very low even with lots of tabs open.
 	* Allow bookmark names to include macros defined by $$ (bug #2142459).
-    
+    * Cleaned up code. 
+	
 2009-10-01	fabian
 
 	* Tweaked close confirmation behavior.
